compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__negative_size_pattern.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert <<1:size(-1)>> = <<>>"
---
----- SOURCE CODE
let assert <<1:size(-1)>> = <<>>

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:16
  │
1 │ let assert <<1:size(-1)>> = <<>>
  │                ^^^^^^^^ A constant size must be a positive number

See: https://tour.gleam.run/data-types/bit-arrays/
